<?xml version="1.0" encoding="utf-8"?>
<resources>    
   
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>    
    <string name="main_menu_recordinfo">检测结果</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_btsetting">蓝牙设置</string>
    <string name="main_menu_exit">退出程序</string>
    
    <string name="frame_title_btdevice">蓝牙设备</string>
    <string name="frame_title_btdevice_refresh">搜索设备</string>
    
    <string name="frame_title_record_list">检测记录</string>   
    
    <string name="login_dialog_logo">读心护士</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    
    <string name="pull_to_refresh_pull_label">Pull down to refresh</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_refresh_tap_label">Pull down to refresh</string>
    <string name="pull_to_refresh_update">最近更新：</string>  
    
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>  
    
    <string name="setting_head_title">系统设置</string>
    
    <string name="ecgMain_user">注册用户: </string>   
    <string name="app_name">BT Transfer</string>
    <string name="main_name">ECG演示</string>
    <string name="enter_id">账号</string>
    <string name="enter_pass">密码</string>
    <string name="button_login">登录</string>
    <string name="title_login">ECG 登录</string>
    <string name="btn_server">服务器</string>
    <string name="btn_bluetooth">蓝牙</string>
    <string name="title_bt">蓝牙</string>
    <string name="btswitch">Bluetooth Switch</string>
    <string name="togglebtn">Toggle Button</string>
    <string name="btsearchdevices">搜索设备</string>
    <string name="devicename">设备ID: </string>
    <string name="devicestatus">设备状态: </string>
    <string name="device_info">设备信息</string>
    <string name="devicebatt">设备电量: </string>
    <string name="action_settings">Settings</string>
    <string name="initstring">未注册</string>
    <string name="ecgStatus">ECG 状态: </string>
    <string name="noData">无数据</string>
    <string name="ecgStartTime">开始时间: </string>
    <string name="ecgDuration">监测时长: </string>
    <string name="ecgPVC">PVC: </string>
    <string name="ecgStart">开始</string>
    <string name="ecgStop">停止</string>
    
    <string name="verify_phone">验证手机号</string>
	<string name="xiayibu">下一步</string>
	<string name="inputphone">请输入手机号码</string>
	<string name="registerPhone">注册手机号码</string>
	<string name="inputcode">请输入验证码</string>
	<string name="send">重新发送</string>
	<string name="setpass">设置密码</string>
    <string name="personalInfo">完善个人信息</string>
     <string name="username">用户名</string>
     
     <string name="menu_login">登录</string>
     <string name="menu_record">监测记录</string>
     <string name="menu_message">消息</string>
     <string name="menu_btdev">蓝牙</string>
     <string name="menu_set">设置</string>
     <string name="menu_logout">退出</string>
</resources>
