<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal|right"
            android:text="@string/btswitch" >
        </TextView>
        
        <ToggleButton
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" 
             android:text="@string/togglebtn" 
             android:checked="true" 
             android:id="@+id/tBtnBTSwitch">
        </ToggleButton>
        
        <Button
             android:layout_height="wrap_content" 
             android:layout_width="wrap_content" 
             android:id="@+id/btnSearchDevice" 
             android:text="@string/btsearchdevices" 
             android:enabled="true">
        </Button>
    </LinearLayout>
    
    <ListView 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:id="@+id/lvDevicesList">
    </ListView>
</LinearLayout>
