<?xml version="1.0" encoding="utf-8"?>
<com.healthme.app.widget.EcgMainView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ecgMain_SV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical"
    tools:context=".ui.Main" >

    <ViewSwitcher
        android:id="@+id/ecgMain_view_switcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ecgMain_LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

				<FrameLayout
				    android:layout_width="fill_parent"  
				    android:layout_height="0dp"
				    android:layout_weight="7"
				    >

                <com.androidplot.xy.XYPlot
                    android:id="@+id/ecgSimpleXYPlot"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    androidPlot.domainLabelWidget.labelPaint.textSize="0dp"
                    androidPlot.graphWidget.domainLabelPaint.textSize="0dp"
                    androidPlot.graphWidget.domainOriginLabelPaint.textSize="0dp"
                    androidPlot.graphWidget.marginBottom="0dp"
                    androidPlot.graphWidget.marginLeft="0dp"
                    androidPlot.graphWidget.marginRight="0dp"
                    androidPlot.graphWidget.marginTop="0dp"
                    androidPlot.graphWidget.rangeLabelPaint.textSize="0dp"
                    androidPlot.graphWidget.rangeOriginLabelPaint.textSize="0dp"
                    androidPlot.legendWidget.heightMetric.value="5dp"
                    androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="0dp"
                    androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="0dp"
                    androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
                    androidPlot.legendWidget.textPaint.textSize="0dp"
                    androidPlot.rangeLabelWidget.labelPaint.textSize="0dp"
                    androidPlot.titleWidget.labelPaint.textSize="1dp"
                    androidplot.renderMode="use_background_thread"
                    android:minHeight="300dp"
                    android:padding="0dip" />
                
                <com.healthme.app.ui.RPM
                    android:id="@+id/rpm"	   
		    		android:layout_width="fill_parent" 
		    		android:layout_height="fill_parent" 
		    		android:layout_gravity="center_horizontal"/>
                <RelativeLayout
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    >
                    
                <ImageView
                                    android:id="@+id/ecgBattIcon2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5.0dip"
                                    android:scaleType="centerInside"
                                    android:layout_alignParentLeft="true"  
                                    android:src="@drawable/batt_hi_cut" />
                
                
                
                
                
                
                <ImageView
                                    android:id="@+id/ecgBattIcon1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
									android:layout_alignParentRight="true"  
                                    android:layout_marginRight="10.0dip"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/batt_hi_cut" />
                </RelativeLayout>
                </FrameLayout>
				
            <LinearLayout
                android:id="@+id/ecgRun_status"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@drawable/table_mid_bg"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ecgRun_title"
                    android:layout_width="fill_parent"
                    android:layout_height="25dip"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:background="@drawable/frame_button_p"
                    android:text="实时监测报告"
                    android:textColor="#ffffffff"
                    android:textSize="@dimen/text_size_15"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ecgRun_sum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5.0dip" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="0dp" >

                        <LinearLayout
                            android:id="@+id/ecgMain_Title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="5.0dip" >

                            <TextView
                                android:id="@+id/testView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:text="@string/ecgMain_user"
                                android:textColor="@color/grayslate"
                                android:textSize="@dimen/text_size_15"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ecgMain_tvUser"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:text="@string/noData"
                                android:textColor="#ff000000"
                                android:textSize="@dimen/text_size_14" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:text="@string/ecgStartTime"
                                android:textColor="@color/grayslate"
                                android:textSize="@dimen/text_size_15"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ecg_tvStartTime"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:duplicateParentState="true"
                                android:text="@string/noData"
                                android:textColor="#ff000000"
                                android:textSize="@dimen/text_size_14" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:text="@string/ecgDuration"
                                android:textColor="@color/grayslate"
                                android:textSize="@dimen/text_size_15"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ecg_tvDuration"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:layout_marginRight="10.0dip"
                                android:text="@string/noData"
                                android:textColor="#ff000000"
                                android:textSize="@dimen/text_size_14" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:duplicateParentState="true"
                                android:text="室性早搏:"
                                android:textColor="@color/grayslate"
                                android:textSize="@dimen/text_size_15"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ecg_tvPVC"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10.0dip"
                                android:layout_marginRight="5.0dip"
                                android:duplicateParentState="true"
                                android:text="@string/noData"
                                android:textColor="#ff000000"
                                android:textSize="@dimen/text_size_14" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ecgHeartbeat"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical"
                        android:padding="0dip" >

                        <TextView
                            android:id="@+id/ecg_tvHeartbeat"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="right|center_vertical"
                            android:paddingRight="10dp"
                            android:text="0"
                            android:textColor="@color/grayslate"
                            android:textSize="90dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/bt_Starting"
            android:layout_width="100.0dip"
            android:layout_height="100.0dip"
            android:layout_gravity="center"
            android:background="@anim/login_loading" />
    </ViewSwitcher>

</com.healthme.app.widget.EcgMainView>